api/swim_form/src/tests/derive/form/invalid_tag_placement_enum.stderr
error: A tag name cannot be specified for an enum type, only its variants.
  --> $DIR/src/tests/derive/form/invalid_tag_placement_enum.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
